--- a/server/database/config.json
+++ b/server/database/config.json
@@ -15,7 +15,7 @@
   },
   "production": {
     "username": "root",
-    "password": "1275056222",
+    "password": "Am1275056222",
     "database": "EggZoneFrame",
     "host": "127.0.0.1",
     "dialect": "mysql"
