--- a/server/config/config.json
+++ b/server/config/config.json
@@ -1,7 +1,7 @@
 {
   "development": {
     "username": "root",
-    "password": "1275056222",
+    "password": "Am1275056222",
     "database": "database_development",
     "host": "127.0.0.1",
     "dialect": "mysql"
