--- a/server/package.json
+++ b/server/package.json
@@ -16,8 +16,11 @@
     "egg-mysql": "^4.0.0",
     "egg-passport": "^2.1.1",
     "egg-passport-local": "^1.2.1",
+    "egg-redis": "^2.5.0",
     "egg-scripts": "^2.17.0",
     "egg-sequelize": "^6.0.0",
+    "egg-session": "^3.3.0",
+    "egg-session-redis": "^2.1.0",
     "egg-socket.io": "^4.1.6",
     "egg-static": "^2.3.1",
     "egg-swagger-doc": "^2.3.2",
@@ -26,6 +29,7 @@
     "moment": "^2.29.4",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.3.3",
+    "nodemailer": "^6.9.9",
     "pako": "^2.1.0",
     "vue-virtual-scroll-list": "^2.3.5",
     "vue-virtual-scroller": "^2.0.0-beta.8"
